# CPU-AI

./: .env.example  .gitignore  AI.ipynb  CogniCore_AntiGravity_Prompt.md  CogniCore_SLM_Blueprint.docx  README.md  pyproject.toml
api/: __init__.py  main.py
api/rag/: context.py  search.py
api/routes/: chat.py  health.py
api/utils/: streaming.py
cognicore/: __init__.py
cognicore/model/: __init__.py  architecture.py  attention.py  bitlinear.py  config.py  ffn.py  inference.py  rmsnorm.py  training.py
cognicore/model/tokenizer/: __init__.py  merges.txt  tokenizer.json  tokenizer_utils.py  train_tokenizer.py  vocab.json
cognicore/model/tokenizer_phase2/: merges.txt  tokenizer.json  vocab.json
cognicore_slm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/: phase1_config.yaml  phase1_dryrun.yaml  phase2_config.yaml  phase3_config.yaml  sft_config.yaml
data/: __init__.py  dataloader.py  download.py  download_sft.py  preprocess.py  preprocess_sft.py
docker/: Dockerfile.serve  Dockerfile.train
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: ChatWindow.tsx  MessageBubble.tsx  ModelStatusBar.tsx  QueryBar.tsx  SettingsPanel.tsx
frontend/src/stores/: chatStore.ts
scripts/: export_onnx.py  quick_demo_train.py  run_phase1.py  run_phase1_pipeline.py  train_phase1.sh  train_sft.py
tests/: test_api.py  test_architecture.py  test_attention.py  test_bitlinear.py  test_config.py  test_rmsnorm.py  test_training.py
