[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognicore-slm"
version = "0.1.0"
description = "CPU-native Small Language Model with BitLinear ternary quantisation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.19",
  "duckduckgo-search>=6.2",
  "fastapi>=0.111",
  "numpy>=1.26",
  "psutil>=5.9",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "safetensors>=0.4",
  "tokenizers>=0.19",
  "torch>=2.3",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "black>=24.4",
  "httpx>=0.27",
  "pytest>=8.2",
  "ruff>=0.5"
]

[tool.setuptools.packages.find]
include = ["cognicore*", "api*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
